* Bug #38894: [WIP] adjusted logic to toggle visibility of More/Less   Button
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-4.1-0@63816 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/umc/js/appcenter.css
+++ b/management/univention-management-console-module-appcenter/umc/js/appcenter.css
@@ -322,6 +322,10 @@
 	width: 50%;
 }
 
+.dijitMenuSeparatorIconCell, .dijitMenuSeparatorLabelCell {
+	padding: 0 !important;
+}
+
 @media screen and (max-width: 549px) {
 	.umc .umcPage.umcAppCenter .umcSize-TwoThirds {
 		width: 100%;
